--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     ></script>
 
     <script defer src="script.js"></script>
-    <title>mapty // Map your workouts</title>
+    <title>MapTrace || Map your workouts</title>
   </head>
   <body>
     <div class="sidebar">
